prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-prod-server-ingres-tests
  namespace: prod
  annotations: 
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prometheus-t
            pathType: Prefix
            backend:
              service:
                name: prometheus-prod-server
                port:
                  number: 9090
